--- a/sv-SE/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/sv-SE/mail/chrome/messenger-newsblog/newsblog.properties
@@ -33,3 +33,6 @@ newsblog-feedNotValidTitle=Ogiltig kanal
 ## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
 newsblog-feedNotValid=%S är inte en giltig RSS-kanal.
 newsblog-getNewMsgsCheck=Kontrollerar om kanalen har nya poster
+
+## LOCALIZATION NOTE(feeds-accountname): This string should be the same as feeds.accountName in am-newsblog.dtd
+feeds-accountname=Bloggar & nyhetskanaler
