--- a/sv-SE/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/sv-SE/mail/chrome/messenger/addressbook/addressBook.properties
@@ -117,6 +117,8 @@ prefixCc=Kopia
 prefixBcc=Dold kopia
 addressBook=Adressbok
 
+browsePhoto=Foto på kontakt
+
 # mailnews.js
 ldap_2.servers.pab.description=Personlig adressbok
 ldap_2.servers.history.description=Insamlade adresser
