--- a/sv-SE/mail/chrome/messenger/preferences/preferences.properties
+++ b/sv-SE/mail/chrome/messenger/preferences/preferences.properties
@@ -30,16 +30,28 @@ useOtherApp=Välj program…
 fpTitleChooseApp=Välj hjälpprogram
 manageApp=Programdetaljer…
 alwaysAsk=Fråga alltid
+delete=Ta bort åtgärd
+confirmDeleteTitle=Ta bort åtgärd
+confirmDeleteText=Är du säker på att du vill ta bort den här åtgärden?
 
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
 # %2$S = brandShortName from brand.properties (for example "Minefield")
 usePluginIn=Använd %1$S (i %2$S)
 
-# LOCALIZATION NOTE (typeDescriptionWithType):
+# LOCALIZATION NOTE (typeDescriptionWithDetails):
 # %1$S = type description (for example "Portable Document Format")
-# %2$S = type (for example "application/pdf")
-typeDescriptionWithType=%1$S (%2$S)
+# %2$S = details (see below, for example "(application/pdf: .pdf, .pdfx)")
+typeDescriptionWithDetails=%1$S %2$S
+
+# LOCALIZATION NOTE (typeDetailsWithTypeOrExt):
+# %1$S = type or extensions (for example "application/pdf", or ".pdf, .pdfx")
+typeDetailsWithTypeOrExt=(%1$S)
+
+# LOCALIZATION NOTE (typeDetailsWithTypeAndExt):
+# %1$S = type (for example "application/pdf")
+# %2$S = extensions (for example ".pdf, .pdfx")
+typeDetailsWithTypeAndExt=(%1$S: %2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Välj ljudfil
