--- a/sv-SE/mail/chrome/messenger/accountCreation.properties
+++ b/sv-SE/mail/chrome/messenger/accountCreation.properties
@@ -1,12 +1,10 @@
 # accountCreation.properties
 
-# LOCALIZATION NOTE: %1$S will be the name of the app (i.e. ThunderBird), %2$S will be the hostname of the server the user was trying to connect to.
-incoming_cleartext_warning=Du har valt att låta %1$S ansluta till servern för inkommande e-post %2$S, som är en osäker server.
-incoming_selfsigned_warning=Du har valt att låta %1$S ansluta säkert till servern för inkommande e-post %2$S, men vi kan inte bekräfta att anslutningen är säker.
-outgoing_cleartext_warning=Du har valt att låta %1$S ansluta till servern för utgående e-post %2$S, som är en osäker server.
-outgoing_selfsigned_warning=Du har valt att låta %1$S ansluta säkert till servern för utgående e-post %2$S, men vi kan inte bekräfta att anslutningen är säker.
+# LOCALIZATION NOTE: %1$S will be the hostname of the server the user was trying to connect to.
+cleartext_warning=%1$S använder inte kryptering.
+selfsigned_warning=%1$S använder inte ett betrott certifikat.
 selfsigned_details=En säker e-postserver presenterar normalt ett betrott certifikat som bevisar att servern verkligen är den den utger sig för att vara. Anslutningen till e-postservern kommer att vara krypterad men det kan inte bekräftas att du ansluter till rätt server.
-cleartext_details=Osäkra e-postservrar använder inte krypterade anslutningar för att skydda dina lösenord och privata uppgifter. Genom att ansluta till den här servern kan dina lösenord och privata uppgifter avslöjas.
+cleartext_details=En osäker e-postserver använder inte en krypterad anslutning för att skydda dina lösenord och privata uppgifter. Genom att ansluta till den här servern kan dina lösenord och privata uppgifter avslöjas.
 
 # LOCALIZATION NOTE(default_server_tag): Used to indicate the default smtp server in the server dropdown list.
 default_server_tag= (standard)
