--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -484,9 +484,27 @@ fileEmptyTitle = Fichier vide
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
 fileEmptyMsg = Le fichier %S est vide.
 
-# second person direct object pronoun; used in the collapsed header view if
-# the user is in the To or Cc field of a message
-headerFieldYou=Vous-même
+# LOCALIZATION NOTE (headertoFieldYou): second person prepositional object
+# pronoun used in the "to" header of the message header pane.  This is also
+# used for the fallback case if a header-specific localization is not
+# available.
+headertoFieldYou=Vous-même
+
+# LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
+# pronoun used in the "from" header of the message header pane.
+headerfromFieldYou=Vous-même
+
+# LOCALIZATION NOTE (headerreply-toFieldYou): second person prepositional
+# object pronoun used in the "reply-to" header of the message header pane.
+headerreply-toFieldYou=Vous-même
+
+# LOCALIZATION NOTE (headerccFieldYou): second person prepositional object
+# pronoun used in the "cc" header of the message header pane.
+headerccFieldYou=Vous-même
+
+# LOCALIZATION NOTE (headerbccFieldYou): second person prepositional object
+# pronoun used in the "bcc" header of the message header pane.
+headerbccFieldYou=Vous-même
 
 # Shown when content tabs are being loaded.
 loadingTab=Chargement en cours…
