--- a/fr/mail/chrome/messenger/accountCreation.properties
+++ b/fr/mail/chrome/messenger/accountCreation.properties
@@ -1,7 +1,8 @@
 # accountCreation.properties
 
-# LOCALIZATION NOTE: %1$S will be the hostname of the server the user was trying to connect to.
+# LOCALIZATION NOTE(cleartext_warning): %1$S will be the hostname of the server the user was trying to connect to.
 cleartext_warning=%1$S n'utilise pas de chiffrement.
+# LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
 selfsigned_warning=%1$S n'utilise pas de certificat éprouvé.
 selfsigned_details=Normalement, un serveur de courrier sécurisé présente un certificat éprouvé pour prouver qu'il est vraiment le serveur qu'il prétend être. La connexion avec le serveur de courrier sera chiffrée mais nous ne pouvons confirmer que ce soit le bon serveur.
 cleartext_details=Les serveurs de courrier non-sécurisés n'utilisent pas de connexions chiffrées pour protéger vos mots de passe et vos informations privées. En vous connectant à ce serveur, vous pourriez exposer votre mot de passe et vos informations privées.
@@ -10,10 +11,13 @@ cleartext_details=Les serveurs de courrier non-sécurisés n'utilisent pas de co
 default_server_tag= (défaut)
 
 # config titles
-searching_for_configs=Recherche en cours…
+# LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
+looking_up_settings=%1$S recherche les paramètres pour votre compte courrier.
 manually_edit_config=Modification de la configuration
-finished_with_success=Terminé
-finished_with_error=Erreur
+# LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
+found_settings=%1$S a trouvé les paramètres pour votre compte courrier.
+# LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
+failed_to_find_settings=%1$S n'a pas réussi à trouver les paramètres pour votre compte courrier. 
 
 # config subtitles
 check_preconfig=vérification pour la pré-configuration…
@@ -45,6 +49,5 @@ no_encryption=Pas de chiffrement
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-name.error=Veuillez saisir vos nom et prénom pour qu'ils puissent être affichés à vos correspondants.
-email.error=Vérifiez à nouveau cette adresse électronique !
-password.error=La connexion a échoué. Veuillez vérifier à nouveau vos identifiant et mot de passe.
+please_enter_name=Veuillez saisir vos nom et prénom.
+double_check_email=Vérifiez à nouveau cette adresse électronique !
