--- a/nl/mail/chrome/messenger/accountCreation.properties
+++ b/nl/mail/chrome/messenger/accountCreation.properties
@@ -1,7 +1,8 @@
 # accountCreation.properties
 
-# LOCALIZATION NOTE: %1$S will be the hostname of the server the user was trying to connect to.
+# LOCALIZATION NOTE(cleartext_warning): %1$S will be the hostname of the server the user was trying to connect to.
 cleartext_warning=%1$S gebruikt geen versleuteling.
+# LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
 selfsigned_warning=%1$S gebruikt geen vertrouwd certificaat.
 selfsigned_details=Normaal toont een beveiligde e-mailserver een vertrouwt certificaat om aan te tonen dat het werkelijk de server is die het zegt te zijn. De verbinding met de e-mailserver zal versleuteld zijn maar het kan niet bevestigd worden dat het de juiste server is.
 cleartext_details=Onveilige servers gebruiken geen versleutelde verbindingen om uw wachtwoorden en privéinformatie te beschermen. Door te verbinden met deze server kunt u uw wachtwoorden en privéinformatie onthullen.
@@ -10,10 +11,13 @@ cleartext_details=Onveilige servers gebruiken geen versleutelde verbindingen om 
 default_server_tag= (standaard)
 
 # config titles
-searching_for_configs=Zoeken…
+# LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
+looking_up_settings=%1$S is de instellingen voor uw e-mailaccount aan het opzoeken.
 manually_edit_config=Config bewerken
-finished_with_success=Voltooid
-finished_with_error=Fout
+# LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
+found_settings=%1$S heeft de instellingen voor uw e-mailaccount gevonden.
+# LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
+failed_to_find_settings=%1$S heeft geen instellingen voor uw e-mailaccount gevonden.
 
 # config subtitles
 check_preconfig=pre-configuratie aan het zoeken…
@@ -45,6 +49,5 @@ no_encryption=Geen versleuteling
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-name.error=Voer uw naam in, deze wordt getoond aan uw correspondenten.
-email.error=Controleer dit e-mailadres!
-password.error=Inliggen is mislukt. Controleer gebruikersnaam en wachtwoord.
+please_enter_name=Voer uw naam in.
+double_check_email=Controleer nogmaals dit e-mailadres!
