--- a/fr/mail/chrome/messenger/preferences/preferences.properties
+++ b/fr/mail/chrome/messenger/preferences/preferences.properties
@@ -65,3 +65,24 @@ attachmentReminderAddDialogTitle=Ajouter un mot-clé
 attachmentReminderAddText=Mot-clé :
 attachmentReminderEditDialogTitle=Modifier le mot-clé
 attachmentReminderEditText=Mot-clé :
+
+#### Cookies
+cookiepermissionstitle=Exceptions - Cookies
+cookiepermissionstext=Vous pouvez indiquer les sites Web qui sont toujours ou ne sont jamais autorisés à utiliser des cookies. Saisissez l'adresse exacte du site et cliquez sur Bloquer, Autoriser pour la session, ou Autoriser.
+invalidURI=Veuillez saisir un nom d'hôte valide
+invalidURITitle=Nom d'hôte invalide
+
+#### Cookie Viewer
+hostColon=Hôte :
+domainColon=Domaine :
+forSecureOnly=Connexions chiffrées uniquement
+forAnyConnection=Tout type de connexion
+AtEndOfSession = à la fin de la session
+can=Autoriser
+canSession=Autoriser pour la session
+cannot=Bloquer
+noCookieSelected=<aucun cookie sélectionné>
+cookiesAll=Les cookies suivants sont stockés sur votre ordinateur :
+cookiesFiltered=Les cookies suivants correspondent à votre recherche :
+removeCookies=Supprimer les cookies
+removeCookie=Supprimer le cookie
