--- a/nl/mail/chrome/messenger/preferences/preferences.properties
+++ b/nl/mail/chrome/messenger/preferences/preferences.properties
@@ -65,3 +65,24 @@ attachmentReminderAddDialogTitle=Sleutelwoord toevoegen
 attachmentReminderAddText=Sleutelwoord:
 attachmentReminderEditDialogTitle=Sleutelwoord bewerken
 attachmentReminderEditText=Sleutelwoord:
+
+#### Cookies
+cookiepermissionstitle=Uitzonderingen - Cookies
+cookiepermissionstext=U kunt aangeven welke websites toestemming hebben om add-ons te installeren. Typ het exacte adres van de website die u toestemming wilt geven en klik vervolgens op Toestaan.
+invalidURI=Vul een geldige hostnaam in
+invalidURITitle=Ongeldige hostnaam ingevuld
+
+#### Cookie Viewer
+hostColon=Host:
+domainColon=Domein:
+forSecureOnly=Alleen beveiligde verbindingen
+forAnyConnection=Alle soorten verbindingen
+AtEndOfSession=Aan het einde van de sessie
+can=Toestaan
+canSession=Toestaan voor sessie
+cannot=Blokkeren
+noCookieSelected=<geen cookie geselecteerd>
+cookiesAll=De volgende cookies zijn op uw computer opgeslagen:
+cookiesFiltered=De volgende cookies komen overeen met uw zoekactie:
+removeCookies=Cookies verwijderen
+removeCookie=Cookie verwijderen
