--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -486,9 +486,27 @@ fileEmptyTitle = Filen er tom
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
 fileEmptyMsg = Filen %S er tom.
 
-# second person direct object pronoun; used in the collapsed header view if
-# the user is in the To or Cc field of a message
+# LOCALIZATION NOTE (headertoFieldYou): second person prepositional object
+# pronoun used in the "to" header of the message header pane.  This is also
+# used for the fallback case if a header-specific localization is not
+# available.
 headerFieldYou=Deg
+
+# LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
+# pronoun used in the "from" header of the message header pane.
+headerfromFieldYou=Deg
+
+# LOCALIZATION NOTE (headerreply-toFieldYou): second person prepositional
+# object pronoun used in the "reply-to" header of the message header pane.
+headerreply-toFieldYou=Deg
+
+# LOCALIZATION NOTE (headerccFieldYou): second person prepositional object
+# pronoun used in the "cc" header of the message header pane.
+headerccFieldYou=Deg
+
+# LOCALIZATION NOTE (headerbccFieldYou): second person prepositional object
+# pronoun used in the "bcc" header of the message header pane.
+headerbccFieldYou=Deg
 
 # Shown when content tabs are being loaded.
 loadingTab=Laster …
@@ -497,18 +515,6 @@ applyToCollapsedMsgsTitle=Bekreft sletting av meldinger i sammenslåtte tråder
 applyToCollapsedMsgs=Advarsel - dette vil slette meldinger som er i sammenslåtte tråder
 applyToCollapsedAlwaysAskCheckbox=Alltid spør meg før sletting av meldinger i sammenslåtte tråder
 applyNowButton=Bruk
-
-#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
-# glodaWhyColumn when performing a gloda-backed search, explaining why a
-# specific result is present in the search.  Because of how the message grouping
-# mechanism works, this value is both the value in the "Why" column as well as
-# the header for the group (when sorting/grouping on the why column.)  Short
-# strings are preferable so the why column can be understood without taking up
-# too much space.
-glodaSearch_results_why_contact=Kontakt
-glodaSearch_results_why_subject=Emne
-glodaSearch_results_why_body=Innhold
-glodaSearch_results_why_attachment=Vedlegg
 
 mailServerLoginFailedTitle=Innlogging feilet
 # LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
