--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -490,7 +490,7 @@ fileEmptyMsg = Filen %S er tom.
 # pronoun used in the "to" header of the message header pane.  This is also
 # used for the fallback case if a header-specific localization is not
 # available.
-headerFieldYou=Deg
+headertoFieldYou=Deg
 
 # LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
 # pronoun used in the "from" header of the message header pane.
