--- a/nb-NO/mail/chrome/messenger/quickSearch.properties
+++ b/nb-NO/mail/chrome/messenger/quickSearch.properties
@@ -5,4 +5,4 @@ searchFromOrSubject.label=Emne- eller fra-filter
 searchRecipient.label=Til- eller Cc-filter
 searchRecipientOrSubject.label=Emne, til, eller Cc-filter
 searchBody.label=Hele meldingen-filter
-saveAsVirtualFolder.label=Lagre søk som virtuell mappe
+saveAsVirtualFolder.label=Lagre søk som søkemappe
