--- a/pl/mail/chrome/messenger/gloda.properties
+++ b/pl/mail/chrome/messenger/gloda.properties
@@ -41,10 +41,6 @@
 gloda.message.attr.folder.facetLabel   = Folder
 gloda.message.attr.folder.facetTooltip = Folder w którym przechowywane są wiadomości
 
-gloda.message.attr.conversation.facetLabel   = Temat
-# FIXME: gloda.message.attr.conversation.facetTooltip=The subject of the conversation the message belongs to.
-gloda.message.attr.conversation.facetTooltip = Temat wątku
-
 gloda.message.attr.fromMe.facetLabel   = Ode mnie
 gloda.message.attr.fromMe.facetTooltip = Wiadomości napisane przeze mnie
 
@@ -53,6 +49,10 @@ gloda.message.attr.toMe.facetTooltip   = Wiadomości adresowane do mnie
 
 gloda.message.attr.involves.facetLabel   = Korespondenci
 gloda.message.attr.involves.facetTooltip = Wszystkie osoby wymienione w nagłówkach od, do, kopia i ukryta kopia dla tej wiadomości
+
+# FIXME: dotłumaczyć
+gloda.message.attr.involves.includeLabel =Involving
+gloda.message.attr.involves.excludeLabel =Not involving
 
 gloda.message.attr.date.facetLabel   = Data
 gloda.message.attr.date.facetTooltip = Data utworzenia wiadomości
