--- a/pl/mail/chrome/messenger/accountCreation.properties
+++ b/pl/mail/chrome/messenger/accountCreation.properties
@@ -8,10 +8,11 @@ cleartext_details  = Skonfigurowany serwer nie zapewnia szyfrowania połączeń,
 default_server_tag = (domyślny)
 
 # config titles
-searching_for_configs = Wyszukiwanie…
-manually_edit_config  = Edycja konfiguracji
-finished_with_success = Zakończono
-finished_with_error   = Błąd
+# %1$S - brandShortName
+looking_up_settings     = Program %1$S wyszukuje ustawienia konta
+manually_edit_config    = Edycja konfiguracji
+found_settings          = Program %1$S znalazł ustawienia konta
+failed_to_find_settings = Program %1$S nie znalazł ustawień konta
 
 # config subtitles
 # FIXME: pre-configuration?
@@ -48,6 +49,5 @@ no_encryption  = Bez szyfrowania
 ssl_tls        = SSL/TLS
 starttls       = STARTTLS
 
-name.error     = Proszę podać swoje imię i nazwisko, aby można je było wyświetlać korespondentom.
-email.error    = Proszę sprawdzić adres e-mail!
-password.error = Logowanie nie powiodło się. Proszę sprawdzić nazwę użytkownika i hasło.
+please_enter_name  = Proszę podać imię i nazwisko lub pseudonim.
+double_check_email = Proszę sprawdzić adres e-mail!
