--- a/nb-NO/mail/chrome/messenger-smime/msgCompSMIMEOverlay.properties
+++ b/nb-NO/mail/chrome/messenger-smime/msgCompSMIMEOverlay.properties
@@ -1,2 +1,2 @@
 ## S/MIME mail compose window error strings.
-NeedSetup=Du må sette opp ett eller flere personlige sertifikater før du kan bruke denne sikkerhetsfunksjonen. Vil du lese om hvordan du kan gjøre dette nå?
+NeedSetup=Du må installere ett eller flere personlige sertifikater før du kan bruke denne sikkerhetsfunksjonen. Vil du gjøre dette nå?
