--- a/nb-NO/mail/chrome/messenger/subscribe.properties
+++ b/nb-NO/mail/chrome/messenger/subscribe.properties
@@ -35,8 +35,8 @@
 #
 # ***** END LICENSE BLOCK *****
 
-subscribeLabel-nntp=Velg nyhetsgruppene du vil være medlem av:
-subscribeLabel-imap=Velg mappene du vil være medlem av:
+subscribeLabel-nntp=Velg nyhetsgruppene du vil abonnere på:
+subscribeLabel-imap=Velg mappene du vil abonnere på:
 currentListTab-nntp.label=Gruppeliste
 currentListTab-nntp.accesskey=G
 currentListTab-imap.label=Mappeliste
