--- a/nb-NO/mail/chrome/messenger-smime/msgSecurityInfo.properties
+++ b/nb-NO/mail/chrome/messenger-smime/msgSecurityInfo.properties
@@ -26,7 +26,7 @@ EINoneLabel=Meldingen er ikke kryptert
 EINone=Meldingen ble kryptert før den ble sendt. Informasjon sendt over Internett uten kryptering kan bli sett av andre mens den overføres.
 EIValidLabel=Meldingen er kryptert
 EIValid=Meldingen ble kryptert før den ble sendt til deg. Kryptering gjør det svært vanskelig for andre å se innholdet i meldingen mens den går over nettet.
-EIInvalidLabel=Melding kunne ikke bli dekryptert
-EIInvalidHeader=Meldingen ble kryptert før den ble sendt til deg, men den kan ikke bli dekryptert.
+EIInvalidLabel=Klarte ikke dekryptere meldingen
+EIInvalidHeader=Meldingen ble kryptert før den ble sendt til deg, men den kan ikke dekrypteres.
 EIContentAltered=Meldingsinnholdet ser ut til å ha blitt endret mens det ble overført.
 EIClueless=Det er noen problemer med denne krypterte meldingen.
