--- a/nb-NO/mail/chrome/messenger/am-smime.properties
+++ b/nb-NO/mail/chrome/messenger/am-smime.properties
@@ -1,10 +1,10 @@
 ## S/MIME error strings.
 ## Note to localization: %S is a placeholder
-NoSenderSigningCert=Du valgte digital signering for dnene meldingen, men programmet kunne ikke finne signeringssertifikatet angitt i kontoinnstillingene, eller så har sertifikatet gått ut på dato.
-NoSenderEncryptionCert=Du slo slå kryptering for denne meldingen, men programmet kunne ikke finne det krypterte sertifikatet angitt i kontoinnstillingene, eller så har sertifikatet gått ut på dato.
-MissingRecipientEncryptionCert=Du slo på kryptering i denne meldingen, men programmet kunne ikke finne et krypteringssertifikat for %S.
-ErrorCanNotEncrypt=Klarte ikke kryptere melding. Kontroller at du har et gyldig e-postsertifikat for hver av mottakerne. Kontroller at sertifikatene angitt for denne e-postkontoen er gyldige og tiltrodde.
-ErrorCanNotSign=Klarte ikke signere melding. Kontroller at det angitte sertifikatet angitt i kontoinnstillingene for denne e-postkontoen er gyldig og betrodd.
+NoSenderSigningCert=Du valgte å signere denne meldingen digitalt, men enten klarte ikke programmet å finne signeringssertifikatet angitt i kontoinnstillingene, eller så er sertifikatet utgått på dato.
+NoSenderEncryptionCert=Du valgte å kryptere denne meldingen, men enten klarte ikke programmet å finne det krypterte sertifikatet angitt i kontoinnstillingene, eller så er sertifikatet utgått på dato.
+MissingRecipientEncryptionCert=Du valgte å kryptere denne meldingen, men programmet klarte ikke finne et krypteringssertifikat for %S.
+ErrorCanNotEncrypt=Klarte ikke kryptere meldingen. Kontroller at du har et gyldig e-postsertifikat for hver av mottakerne. Kontroller at sertifikatene angitt for denne e-postkontoen er gyldige og tiltrodde.
+ErrorCanNotSign=Klarte ikke signere meldingen. Kontroller at sertifikatet angitt i kontoinnstillingene for denne e-postkontoen er gyldig og tiltrodd.
 
 ## Strings used for in the prefs.
 prefPanel-smime=Sikkerhet
@@ -16,4 +16,4 @@ encryption_wantSame=Vil du bruke det samme sertifikatet for å kryptere og dekry
 encryption_needCertWantToSelect=Du bør også angi et sertifikat som andre kan bruke når de sender krypterte meldinger til deg. Vil du sette opp et krypteringssertifikat nå?
 signing_needCertWantSame=Du bør også angi et sertifikat for digital signering av meldingene dine. Vil du bruke det samme sertifikatet for å digitalt signere meldingene?
 signing_wantSame=Vil du bruke det samme sertifikatet for å signere meldingene dine?
-signing_needCertWantToSelect=Du bør også angi et sertifikat som skal brukes for digital signering av meldinger. Vil du sette opp et sertifikat for digital signering nå?
+signing_needCertWantToSelect=Du bør også angi et sertifikat for digital signering av meldinger. Vil du sette opp et sertifikat for digital signering nå?
