--- a/sv-SE/mail/chrome/messenger/preferences/preferences.properties
+++ b/sv-SE/mail/chrome/messenger/preferences/preferences.properties
@@ -65,3 +65,25 @@ attachmentReminderAddDialogTitle=Lägg till nyckelord
 attachmentReminderAddText=Nyckelord:
 attachmentReminderEditDialogTitle=Redigera nyckelord
 attachmentReminderEditText=Nyckelord:
+
+#### Cookies
+cookiepermissionstitle=Undantag - Kakor
+cookiepermissionstext=Du kan ange vilka webbplatser som alltid eller aldrig får använda kakor. Skriv in adressen till platsen du vill hantera och klicka på Blockera, Tillåt för sessionen eller Tillåt.
+invalidURI=Skriv in ett giltigt värdnamn
+invalidURITitle=Ogiltigt värdnamn
+
+#### Cookie Viewer
+hostColon=Värd:
+domainColon=Domän:
+forSecureOnly=Endast krypterade förbindelser
+forAnyConnection=Alla typer av förbindelser
+AtEndOfSession=Vid sessionens slut
+can=Tillåt
+canSession=Tillåt för sessionen
+cannot=Blockera
+noCookieSelected=<ingen kaka vald>
+cookiesAll=Följande kakor lagras på datorn:
+cookiesFiltered=Följande kakor matchar din sökning:
+removeCookies=Ta bort
+removeCookie=Ta bort
+
